--- a/HEllo.html
+++ b/HEllo.html
@@ -38,7 +38,7 @@ data-name="sample model"
 ar
 background-color="#ffffff"
 ar-modes="webxr scene-viewer quick-look"
-src="https://digitize-solutions.github.io/Safatar/90035660_04.glb" 
+src="https://digitize-solutions.github.io/Safatar/Mod90035660.glb" 
 alt="A 3D model" auto-rotate camera-controls>
 </model-viewer>
 
